# django-project

./: .gitignore  Dockerfile  docker-compose.yaml  new_orders.csv  pyproject.toml  requirements.txt
M_07_CBV/mysite/shopapp/: views.py
myproject/fileupload/: middlewares.py  urls.py  views.py
myproject/fileupload/templates/fileupload/: base.html  file-too-big.html  file-upload.html
myproject/myproject/: settings.py  urls.py
myproject/shopapp/: admin.py  forms.py  models.py  urls.py  views.py
myproject/shopapp/management/commands/: create_order.py  update_order.py
myproject/shopapp/migrations/: 0004_alter_product_options.py
myproject/shopapp/templates/shopapp/: base.html  create-order.html  create-product.html  order_confirm_delete.html  order_form.html  order_list.html  order_update_form.html  orders-list.html  product_confirm_delete.html  (+4 more)
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/myauth/: models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  api.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_order_products_order_user.py  0005_product_created_by.py  0006_alter_product_discount.py  0007_alter_order_options_alter_product_options.py  0008_productimage.py
(+23 files in other folders)
