[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["goeva_elizaveta <liz.goeva02@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.2"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"
pillow = "^10.0.0"
flake8 = "^6.1.0"
docutils = "^0.20.1"
drf-spectacular = "^0.26.4"
pydocstyle = "^6.3.0"
sentry-sdk = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
